--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 ext {
-	build_sourceEncoding = 'UTF-8'
-	reporting_outputEncoding = 'UTF-8'
+	default_charset = 'UTF-8'
 
 	jboss_marshalling_version = '1.3.18.GA'
+
 	jetty_npn_version = '1.1.9.v20141016'
 	//jetty_npn_path = "${settings.localRepository}/org/mortbay/jetty/npn/npn-boot/${jetty.npn.version}/npn-boot-${jetty.npn.version}.jar"
+
 	jetty_alpn_version = '8.1.2.v20141202'
 	//jetty_alpn_path = "${settings.localRepository}/org/mortbay/jetty/alpn/alpn-boot/${jetty.alpn.version}/alpn-boot-${jetty.alpn.version}.jar"
 
@@ -23,68 +24,87 @@ ext {
 	argLine_coverage = '-D_'
 }
 
-group = 'io.netty'
-version = '5.0.0.Alpha2-SNAPSHOT'
+// ================================================
+// Defines all the denpendencies.
+// Include third party libraries and netty modules.
 
-def dependencyManagement = [
+// Gradle support transitive dependency
+def moduleDependencies = [
+	'buffer':                 ['common'],
+	'codec':                  ['transport'],
+	'codec-dns':              ['codec'],
+	'codec-haproxy':          ['codec'],
+	'codec-http':             ['handler'],
+	'codec-http2':            ['codec-http'],
+	'codec-memcache':         ['codec'],
+	'codec-mqtt':             ['codec'],
+	'codec-socks':            ['codec'],
+	'codec-stomp':            ['codec'],
+	'handler':                ['codec'],
+	'handler-proxy':          ['codec-socks', ':codec-http'],
+	'resolver':               ['common'],
+	'resolver-dns':           ['codec-dns'],
+	'transport':              ['buffer', ':resolver'],
+	'transport-native-epoll': ['transport'],
+	'transport-rxtx':         ['transport'],
+	'transport-sctp':         ['codec'],
+	'transport-udt':          ['transport'],
+
+	'example':                ['transport-sctp', 'handler-proxy', 'codec-memcache', 'codec-http2', 'codec-stomp'],
+	'microbench':             ['codec-http'],
+	'testsuite':              ['transport-sctp', 'codec-http', 'transport-udt']
+]
+
+def extraDependencies = [
 	// Byte code generator - completely optional
 	'javassist': [
 		'groupId': 'org.javassist',
 		'artifactId': 'javassist',
-		'version': '3.18.0-GA',
-		'test': false
+		'version': '3.18.0-GA'
 	],
 	// JBoss Marshalling - completely optional
 	'jboss-marshalling': [
 		'groupId': 'org.jboss.marshalling',
 		'artifactId': 'jboss-marshalling',
-		'version': rootProject.ext.jboss_marshalling_version,
-		'test': false
+		'version': jboss_marshalling_version
 	],
 	// SPDY and HTTP/2 - completely optional
 	'hpack': [
 		'groupId': 'com.twitter',
 		'artifactId': 'hpack',
-		'version': '0.10.0',
-		'test': false
+		'version': '0.10.0'
 	],
 	'npn-api': [
 		'groupId': 'org.eclipse.jetty.npn',
 		'artifactId': 'npn-api',
-		'version': '1.1.1.v20141010',
-		'test': false
+		'version': '1.1.1.v20141010'
 	],
 	'npn-boot': [
 		'groupId': 'org.mortbay.jetty.npn',
 		'artifactId': 'npn-boot',
-		'version': "${jetty_npn_version}",
-		'test': false
+		'version': jetty_npn_version
 	],
 	'alpn-api': [
 		'groupId': 'org.eclipse.jetty.alpn',
 		'artifactId': 'alpn-api',
-		'version': '1.1.0.v20141014',
-		'test': false
+		'version': '1.1.0.v20141014'
 	],
 	'alpn-boot': [
 		'groupId': 'org.mortbay.jetty.alpn',
 		'artifactId': 'alpn-boot',
-		'version': "${jetty_alpn_version}",
-		'test': false
+		'version': jetty_alpn_version
 	],
 	// Google Protocol Buffers - completely optional
 	'protobuf-java': [
 		'groupId': 'com.google.protobuf',
 		'artifactId': 'protobuf-java',
-		'version': '2.5.0',
-		'test': false
+		'version': '2.5.0'
 	],
 	// Our own Tomcat Native fork - completely optional, used for acclerating SSL with OpenSSL
 	'netty-tcnative': [
-		'groupId': rootProject.group,
+		'groupId': 'io.netty',
 		'artifactId': 'netty-tcnative',
-		'version': '1.1.32.Fork1',
-		'test': false
+		'version': '1.1.32.Fork1'
 	],
 	// Bouncy Castle - completely optional, only needed when:
 	// - you generate a temporary self-signed certificate using SelfSignedCertificate, and
@@ -92,328 +112,199 @@ def dependencyManagement = [
 	'bcpkix-jdk15on': [
 		'groupId': 'org.bouncycastle',
 		'artifactId': 'bcpkix-jdk15on',
-		'version': '1.50',
-		'test': false
+		'version': '1.50'
 	],
 	'jzlib': [
 		'groupId': 'com.jcraft',
 		'artifactId': 'jzlib',
-		'version': '1.1.2',
-		'test': false
+		'version': '1.1.2'
 	],
 	'compress-lzf': [
 		'groupId': 'com.ning',
 		'artifactId': 'compress-lzf',
-		'version': '1.0.1',
-		'test': false
+		'version': '1.0.1'
 	],
 	'lz4': [
 		'groupId': 'net.jpountz.lz4',
 		'artifactId': 'lz4',
-		'version': '1.2.0',
-		'test': false
-	],
-	'marshalling': [
-		'groupId': 'org.javassist',
-		'artifactId': 'javassist',
-		'version': rootProject.ext.jboss_marshalling_version,
-		'test': false
+		'version': '1.2.0'
 	],
 	'lzma-java': [
 		'groupId': 'com.github.jponge',
 		'artifactId': 'lzma-java',
-		'version': '1.3',
-		'test': false
+		'version': '1.3'
 	],
 	'rxtx': [
 		'groupId': 'org.rxtx',
 		'artifactId': 'rxtx',
-		'version': '2.1.7',
-		'test': false
+		'version': '2.1.7'
 	],
 	'barchart-udt-bundle': [
 		'groupId': 'com.barchart.udt',
 		'artifactId': 'barchart-udt-bundle',
-		'version': '2.3.0',
-		'test': false
+		'version': '2.3.0'
 	],
 	'servlet-api': [
 		'groupId': 'javax.servlet',
 		'artifactId': 'servlet-api',
-		'version': '2.5',
-		'test': false
+		'version': '2.5'
 	],
 	'slf4j-api': [
 		'groupId': 'org.slf4j',
 		'artifactId': 'slf4j-api',
-		'version': '1.7.5',
-		'test': false
+		'version': '1.7.5'
 	],
 	'commons-logging': [
 		'groupId': 'commons-logging',
 		'artifactId': 'commons-logging',
-		'version': '1.1.3',
-		'test': false
+		'version': '1.1.3'
 	],
 	'log4j': [
 		'groupId': 'log4j',
 		'artifactId': 'log4j',
-		'version': '1.2.17',
-		'test': false
+		'version': '1.2.17'
 	],
 	// Metrics providers
 	'metrics-core': [
 		'groupId': 'com.yammer.metrics',
 		'artifactId': 'metrics-core',
-		'version': '2.2.0',
-		'test': false
+		'version': '2.2.0'
 	],
 	// Common test dependencies
 	'junit': [
 		'groupId': 'junit',
 		'artifactId': 'junit',
-		'version': '4.11',
-		'test': true
+		'version': '4.11'
 	],
 	'hamcrest-library': [
 		'groupId': 'org.hamcrest',
 		'artifactId': 'hamcrest-library',
-		'version': '1.3',
-		'test': true
+		'version': '1.3'
 	],
 	'easymock': [
 		'groupId': 'org.easymock',
 		'artifactId': 'easymock',
-		'version': '3.2',
-		'test': true
+		'version': '3.2'
 	],
 	'easymockclassextension': [
 		'groupId': 'org.easymock',
 		'artifactId': 'easymockclassextension',
-		'version': '3.2',
-		'test': true
+		'version': '3.2'
 	],
 	'jmock-junit4': [
 		'groupId': 'org.jmock',
 		'artifactId': 'jmock-junit4',
-		'version': '2.6.0',
-		'test': true
+		'version': '2.6.0'
 	],
 	'mockito-core': [
 		'groupId': 'org.mockito',
 		'artifactId': 'mockito-core',
-		'version': '1.10.8',
-		'test': true
+		'version': '1.10.8'
 	],
 	'logback-classic': [
 		'groupId': 'ch.qos.logback',
 		'artifactId': 'logback-classic',
-		'version': '1.0.13',
-		'test': true
+		'version': '1.0.13'
 	],
 	// Test dependencies for jboss marshalling encoder/decoder
 	'jboss-marshalling-serial': [
 		'groupId': 'org.jboss.marshalling',
 		'artifactId': 'jboss-marshalling-serial',
-		'version': rootProject.ext.jboss_marshalling_version,
-		'test': true
+		'version': jboss_marshalling_version
 	],
 	'jboss-marshalling-river': [
 		'groupId': 'org.jboss.marshalling',
 		'artifactId': 'jboss-marshalling-river',
-		'version': rootProject.ext.jboss_marshalling_version,
-		'test': true
+		'version': jboss_marshalling_version
 	],
 	// Test dependencies for microbench
 	'caliper': [
 		'groupId': 'com.google.caliper',
 		'artifactId': 'caliper',
-		'version': '0.5-rc1',
-		'test': true
+		'version': '0.5-rc1'
 	],
 	// Test dependency for Bzip2Decoder
 	'commons-compress': [
 		'groupId': 'org.apache.commons',
 		'artifactId': 'commons-compress',
-		'version': '1.8.1',
-		'test': true
+		'version': '1.8.1'
 	],
 	// Test suite dependency for generating a compressed heap dump file
 	'xz': [
 		'groupId': 'org.tukaani',
 		'artifactId': 'xz',
-		'version': '1.5',
-		'test': true
-	],
-	// Test dependency for Bzip2Decoder
-	'commons-compress': [
-		'groupId': 'org.apache.commons',
-		'artifactId': 'commons-compress',
-		'version': '1.8.1',
-		'test': true
-	],
-	// Test dependency for Bzip2Decoder
-	'commons-compress': [
-		'groupId': 'org.apache.commons',
-		'artifactId': 'commons-compress',
-		'version': '1.8.1',
-		'test': true
-	],
-	// Test dependency for Bzip2Decoder
-	'commons-compress': [
-		'groupId': 'org.apache.commons',
-		'artifactId': 'commons-compress',
-		'version': '1.8.1',
-		'test': true
+		'version': '1.5'
 	]
 ]
+// ================================================
+
+def getProjectByName(dirName) {
+	allprojects.find {
+		it.name.contains(dirName)
+	}
+}
+
+def assembleModuleSources = allprojects.findAll {
+	!it.name.contains('example') && !it.name.contains('microbench') && !it.name.contains('testsuite')
+}.collect {
+	it.sourceSets.main.allJava
+}
 
 allprojects {
+	group = 'io.netty'
+	version = '5.0.0.Alpha2-SNAPSHOT'
+
 	apply plugin: 'java'
 
 	sourceCompatibility = 1.6
 	targetCompatibility = 1.7
 
-	tasks.withType(JavaCompile) {
-		options.encoding = rootProject.ext.build_sourceEncoding
-		options.warnings = false
-	}
-
-	dependencies {
-		dependencyManagement.each { k, v ->
-			def lib = "${v.groupId}:${v.artifactId}:${v.version}"
-			if (v.test) {
-				testCompile lib
-			} else {
-				compile lib
-			}
-		}
-	}
-
 	repositories {
 		mavenLocal()
 		mavenCentral()
 	}
-}
 
-project(':buffer') {
 	dependencies {
-		compile project(':common')
+		extraDependencies.each { k, v ->
+			def lib = "${v.groupId}:${v.artifactId}:${v.version}"
+			compile lib
+			testCompile lib
+		}
+
+		moduleDependencies[projectDir.name].each {
+			compile getProjectByName(it)
+		}
+	}
+
+	tasks.withType(JavaCompile) {
+		options.encoding = rootProject.default_charset
+		options.warnings = false
+	}
+
+	javadoc {
+		failOnError = false
 	}
 }
 
-project(':codec') {
-	dependencies {
-		compile project(':transport')
-	}
+task generateJavadoc(type: Javadoc) {
+	options.encoding = default_charset
+	options.quiet()
+	failOnError = false
+	source assembleModuleSources
 }
 
-project(':codec-dns') {
-	dependencies {
-		compile project(':codec')
-	}
+task packageJavadoc(type: Jar, dependsOn: generateJavadoc) {
+	classifier = 'javadoc'
+	from "$buildDir/docs/javadoc"
+	exclude 'com'
+	destinationDir = file("$buildDir/docs")
 }
 
-project(':codec-haproxy') {
-	dependencies {
-		compile project(':codec')
-	}
+task packageSource(type: Jar) {
+	classifier = 'sources'
+	from assembleModuleSources
+	include 'io/netty/**/*'
+	destinationDir = file("$buildDir/sources")
 }
 
-project(':codec-http') {
-	dependencies {
-		compile project(':codec')
-		compile project(':handler')
-	}
-}
-
-project(':codec-http2') {
-	dependencies {
-		compile project(':codec-http')
-		compile project(':handler')
-	}
-}
-
-project(':codec-memcache') {
-	dependencies {
-		compile project(':codec')
-	}
-}
-
-project(':codec-mqtt') {
-	dependencies {
-		compile project(':codec')
-	}
-}
-
-project(':codec-socks') {
-	dependencies {
-		compile project(':codec')
-	}
-}
-
-project(':codec-stomp') {
-	dependencies {
-		compile project(':codec')
-	}
-}
-
-project(':handler') {
-	dependencies {
-		compile project(':buffer')
-		compile project(':transport')
-		compile project(':codec')
-	}
-}
-
-project(':handler-proxy') {
-	dependencies {
-		compile project(':handler')
-		compile project(':transport')
-		compile project(':codec-http')
-		compile project(':codec-socks')
-	}
-}
-
-project(':resolver') {
-	dependencies {
-		compile project(':common')
-	}
-}
-
-project(':resolver-dns') {
-	dependencies {
-		compile project(':codec-dns')
-		compile project(':resolver')
-		compile project(':transport')
-	}
-}
-
-project(':transport') {
-	dependencies {
-		compile project(':buffer')
-		compile project(':resolver')
-	}
-}
-
-project(':transport-rxtx') {
-	dependencies {
-		compile project(':transport')
-		compile project(':buffer')
-	}
-}
-
-project(':transport-sctp') {
-	dependencies {
-		compile project(':transport')
-		compile project(':buffer')
-		compile project(':codec')
-	}
-}
-
-project(':transport-udt') {
-	dependencies {
-		compile project(':transport')
-		compile project(':buffer')
-	}
-}
+println(project(':buffer').name)
