--- a/settings.gradle
+++ b/settings.gradle
@@ -1,19 +1,27 @@
-include ':common',
-		':buffer',
-		':codec',
-		':codec-dns',
-		':codec-haproxy',
-		':codec-http',
-		':codec-http2',
-		':codec-memcache',
-		':codec-mqtt',
-		':codec-socks',
-		':codec-stomp',
-		':handler',
-		':handler-proxy',
-		':resolver',
-		':resolver-dns',
-		':transport',
-		':transport-rxtx',
-		':transport-sctp',
-		':transport-udt'
+include ':netty-buffer',                //common
+		':codec',                 //transport
+		':codec-dns',             //codec
+		':codec-haproxy',         //codec
+		':codec-http',            //codec, handler
+		':codec-http2',           //codec-http, handler
+		':codec-memcache',        //codec
+		':codec-mqtt',            //codec
+		':codec-socks',           //codec
+		':codec-stomp',           //codec
+		':common',       
+		':handler',               //buffer, transport, codec
+		':handler-proxy',         //transport, codec-socks, codec-http, handler
+		':resolver',              //common
+		':resolver-dns',          //resolver, codec-dns, transport
+		':transport',             //buffer, resolver
+		//'transport-native-epoll', //common, buffer, transport, testsuite(test)
+		':transport-rxtx',        //buffer, transport
+		':transport-sctp',        //buffer, codec, transport
+		':transport-udt'         //buffer, transport
+
+		//'example',                //transport, transport-sctp, handler, handler-proxy, codec-http, codec-memcache, codec-http2, codec-socks, codec-stomp, transport-udt, transport-rxtx
+		//'microbench',             //handler, codec-http
+		//'testsuite'               //transport-sctp, handler, codec-http, transport-udt
+
+project(':netty-buffer').projectDir = new File('buffer')
+
