--- a/common/src/main/templates/io/netty/util/collection/KObjectHashMap.template
+++ b/common/src/main/templates/io/netty/util/collection/KObjectHashMap.template
@@ -33,7 +33,7 @@ import java.util.NoSuchElementException;
 public class @K@ObjectHashMap<V> implements @K@ObjectMap<V>, Iterable<@K@ObjectMap.Entry<V>> {
 
     /** Default initial capacity. Used if not specified in the constructor */
-    public static final int DEFAULT_CAPACITY = 11;
+    public static final int DEFAULT_CAPACITY = 8;
 
     /** Default load factor. Used if not specified in the constructor */
     public static final float DEFAULT_LOAD_FACTOR = 0.5f;
@@ -52,7 +52,6 @@ public class @K@ObjectHashMap<V> implements @K@ObjectMap<V>, Iterable<@K@ObjectM
 
     private @k@[] keys;
     private V[] values;
-    private Collection<V> valueCollection;
     private int size;
     private int mask;
 
@@ -240,38 +239,33 @@ public class @K@ObjectHashMap<V> implements @K@ObjectMap<V>, Iterable<@K@ObjectM
 
     @Override
     public Collection<V> values() {
-        Collection<V> valueCollection = this.valueCollection;
-        if (valueCollection == null) {
-            this.valueCollection = valueCollection = new AbstractCollection<V>() {
-                @Override
-                public Iterator<V> iterator() {
-                    return new Iterator<V>() {
-                        final Iterator<Entry<V>> iter = @K@ObjectHashMap.this.iterator();
-                        @Override
-                        public boolean hasNext() {
-                            return iter.hasNext();
-                        }
+        return new AbstractCollection<V>() {
+            @Override
+            public Iterator<V> iterator() {
+                return new Iterator<V>() {
+                    final Iterator<Entry<V>> iter = @K@ObjectHashMap.this.iterator();
+                    @Override
+                    public boolean hasNext() {
+                        return iter.hasNext();
+                    }
 
-                        @Override
-                        public V next() {
-                            return iter.next().value();
-                        }
+                    @Override
+                    public V next() {
+                        return iter.next().value();
+                    }
 
-                        @Override
-                        public void remove() {
-                            throw new UnsupportedOperationException();
-                        }
-                    };
-                }
+                    @Override
+                    public void remove() {
+                        throw new UnsupportedOperationException();
+                    }
+                };
+            }
 
-                @Override
-                public int size() {
-                    return size;
-                }
-            };
-        }
-
-        return valueCollection;
+            @Override
+            public int size() {
+                return size;
+            }
+        };
     }
 
     @Override
@@ -370,18 +364,13 @@ public class @K@ObjectHashMap<V> implements @K@ObjectMap<V>, Iterable<@K@ObjectM
         size++;
 
         if (size > maxSize) {
-            // Need to grow the arrays. We take care to detect integer overflow,
-            // also limit array size to ArrayList.MAX_ARRAY_SIZE.
+            // Double the capacity.
             int newCapacity = keys.length << 1;
             if(newCapacity < 0) {
                 throw new IllegalStateException("Max capacity reached at size=" + size);
             } else {
                 rehash(newCapacity);
             }
-        } else if (size == keys.length) {
-            // Open addressing requires that we have at least 1 slot available. Need to refresh
-            // the arrays to clear any removed elements.
-            rehash(keys.length);
         }
     }
 
@@ -560,14 +549,14 @@ public class @K@ObjectHashMap<V> implements @K@ObjectMap<V>, Iterable<@K@ObjectM
     /**
      * Fast method of finding the next power of 2 greater than or equal to the supplied value.
      *
-     * If the value is &lt;= 0 then 1 will be returned.
+     * If the value is {@code <= 0} then 1 will be returned.
      *
      * This method is not suitable for {@link Integer#MIN_VALUE} or numbers greater than 2^30.*
      * @param value from which to search for next power of 2
      * @return The next power of 2 or the value itself if it is a power of 2
      */
-    private static int findNextPositivePowerOfTwo(final int value)
-    {
+    private static int findNextPositivePowerOfTwo(final int value) {
+        assert value > Integer.MIN_VALUE && value < 0x40000000;
         return 1 << (32 - Integer.numberOfLeadingZeros(value - 1));
     }
 }
