addressing more comments.

--- a/common/src/main/templates/io/netty/util/collection/KObjectHashMap.template
+++ b/common/src/main/templates/io/netty/util/collection/KObjectHashMap.template
@@ -15,6 +15,8 @@
 
 package io.netty.util.collection;
 
+import static io.netty.util.internal.MathUtil.findNextPositivePowerOfTwo;
+
 import java.lang.reflect.Array;
 import java.util.AbstractCollection;
 import java.util.Arrays;
@@ -543,19 +545,5 @@ public class @K@ObjectHashMap<V> implements @K@ObjectMap<V>, Iterable<@K@ObjectM
      */
     protected String keyToString(@k@ key) {
         return @O@.toString(key);
-    }
-
-    /**
-     * Fast method of finding the next power of 2 greater than or equal to the supplied value.
-     *
-     * If the value is {@code <= 0} then 1 will be returned.
-     *
-     * This method is not suitable for {@link Integer#MIN_VALUE} or numbers greater than 2^30.*
-     * @param value from which to search for next power of 2
-     * @return The next power of 2 or the value itself if it is a power of 2
-     */
-    private static int findNextPositivePowerOfTwo(final int value) {
-        assert value > Integer.MIN_VALUE && value < 0x40000000;
-        return 1 << (32 - Integer.numberOfLeadingZeros(value - 1));
     }
 }
