--- a/pom.xml
+++ b/pom.xml
@@ -993,6 +993,8 @@
             <!-- SSLSession implementation -->
             <ignore>javax.net.ssl.SSLEngine</ignore>
             <ignore>javax.net.ssl.X509ExtendedTrustManager</ignore>
+            <ignore>javax.net.ssl.SSLParameters</ignore>
+            <ignore>java.security.AlgorithmConstraints</ignore>
             
             <ignore>java.util.concurrent.ConcurrentLinkedDeque</ignore>
           </ignores>
